[tool.poetry]
name = "maps"
version = "0.1.0"
description = ""
authors = ["Benjamin D. Pedigo <benjamindpedigo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pkg = {path = "pkg", develop = true}
giskard-toolbox = {path = "../giskard", develop = true}
jupyter-client = "6.1.12" # https://github.com/jupyter/jupyter_client/issues/637
networkx = "<3.0"
gpxplotter = "^0.2.10"
gpxpy = "^1.5.0"
Cython = ">=3.0.0"
googlemaps = "^4.10.0"
geopandas = "^0.13.2"
osmnx = "^1.6.0"
global-land-mask = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
rope = "^0.20.1"
jupyter = "^1.0.0"
jupyter-book = "^0.12.1"
jupytext = "^1.13.8"
ghp-import = "^2.0.1"
ipykernel = "^6.6.0"
